# shop-share

./: .gitignore  LICENSE  README.md  TODO.org  protocol.md
Goojle Retain/: Podfile
Goojle Retain/Goojle Retain/: Actions.swift  AppDelegate.swift  ClientAction.swift  DataSource.swift  DataTypes.swift  ErrorTypes.swift  GRWebSocket+Delegate.swift  GRWebSocket.swift  GRWebSocketDelegateProtocol.swift  ListsCollectionViewCell.swift  ListsCollectionViewController.swift  MockWebSocket.swift  Result.swift  ServerAction.swift  ViewController.swift  WebSocket.swift
Goojle Retain/Goojle Retain.xcodeproj/: project.pbxproj
Goojle Retain/Goojle Retain.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Goojle Retain/Goojle Retain.xcodeproj/project.xcworkspace/xcuserdata/timothybarraclough.xcuserdatad/: UserInterfaceState.xcuserstate
Goojle Retain/Goojle Retain.xcodeproj/xcshareddata/xcschemes/: Goojle Retain.xcscheme
Goojle Retain/Goojle Retain.xcodeproj/xcuserdata/timothybarraclough.xcuserdatad/xcschemes/: xcschememanagement.plist
Goojle Retain/Goojle Retain.xcworkspace/: contents.xcworkspacedata
Goojle Retain/Goojle Retain.xcworkspace/xcuserdata/timothybarraclough.xcuserdatad/: UserInterfaceState.xcuserstate
Goojle Retain/Goojle Retain.xcworkspace/xcuserdata/timothybarraclough.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Goojle Retain/Goojle Retain/Base.lproj/: Main.storyboard
Goojle Retain/Goojle Retain/Goojle_Retain.xcdatamodeld/: .xccurrentversion
client/: Makefile  elm-package.json  index.html  package.json  shopshare.css  shopshare.sass
client/css/: shopshare.sass
client/src/: Action.elm  Config.elm  CssHelpers.elm  Debouncers.elm  Event.elm  JSON.elm  Main.elm  Ports.elm  PubSub.elm  RecordHelpers.elm  ShopShare.elm  Types.elm  UpdateHelpers.elm  UuidHelpers.elm
server/: Dockerfile  README.md  db_dump.sql  docker-compose.yml  server.cabal  stack.yaml
server/app/: Main.hs
server/src/: API.hs  DB.hs  HttpServer.hs  JSON.hs  Server.hs  Types.hs  WsServer.hs
server/test/: Spec.hs
