name:                server
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/kylesnowschwartz/shop-share
license:             MIT
author:              Kyle Snow Schwartz & Kieran Trezona-le Comte
maintainer:          trezona.lecomte@gmail.com
copyright:           2017 Kyle Snow Schwartz & Kieran Trezona-le Comte
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , DB
                     , Types
                     , HttpServer
                     , WsServer
                     , JSON
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.2.1.0
                     , bytestring
                     , containers
                     , http-types
                     , mtl
                     , postgresql-simple
                     , postgresql-transactional
                     , hspec
                     , servant >= 0.11
                     , servant-server >= 0.11
                     , text
                     , uuid
                     , uuid-types
                     , wai
                     , wai-logger
                     , wai-middleware-static
                     , wai-websockets
                     , warp
                     , websockets
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kylesnowschwartz/shop-share
